// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagGroup Grouped tags with TagGroup 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  border-radius: 0.25rem;
  font-size: .75rem;
  line-height: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.625rem;
  border-radius: 0.25rem;
  font-size: .875rem;
  line-height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  border-radius: 0.25rem;
  font-size: .75rem;
  line-height: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
  cursor: not-allowed;
  opacity: 0.5;
}

.c5 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .75rem;
  gap: 0.5rem;
}

.c6 {
  cursor: pointer;
  color: hsla(271,81%,56%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="list"
        >
          html
        </div>
        <div
          class="c2"
          role="list"
        >
          typescript
        </div>
        <div
          class="c3"
          role="list"
        >
          javascript
        </div>
        <div
          class="c4"
          disabled=""
          role="list"
        >
          cloud
        </div>
        <div
          class="c2"
          role="list"
        >
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <i
              style="height: 1.25em; width: 1.25em;"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                style="height: 1.25em; width: 1.25em;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </i>
          </i>
          kotlin
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <i
          role="button"
          style="height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            focusable="false"
            style="height: 1.8em; width: 1.8em;"
            tone="major"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  border-radius: 0.25rem;
  font-size: .75rem;
  line-height: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.625rem;
  border-radius: 0.25rem;
  font-size: .875rem;
  line-height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  border-radius: 0.25rem;
  font-size: .75rem;
  line-height: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
  cursor: not-allowed;
  opacity: 0.5;
}

.c5 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .75rem;
  gap: 0.5rem;
}

.c6 {
  cursor: pointer;
  color: hsla(271,81%,56%,1);
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="list"
      >
        html
      </div>
      <div
        class="c2"
        role="list"
      >
        typescript
      </div>
      <div
        class="c3"
        role="list"
      >
        javascript
      </div>
      <div
        class="c4"
        disabled=""
        role="list"
      >
        cloud
      </div>
      <div
        class="c2"
        role="list"
      >
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </i>
        </i>
        kotlin
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c5"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <i
        role="button"
        style="height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c6"
          fill="currentColor"
          focusable="false"
          style="height: 1.8em; width: 1.8em;"
          tone="major"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating by bluing the input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(270,95%,75%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="list"
        >
          react
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          java
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          cloud
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          scss
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <i
          role="button"
          style="height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="height: 1.8em; width: 1.8em;"
            tone="major"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(270,95%,75%,1);
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="list"
      >
        react
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        java
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        cloud
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        scss
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <i
        role="button"
        style="height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="height: 1.8em; width: 1.8em;"
          tone="major"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating by clicking enter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(271,81%,56%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="list"
        >
          react
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          java
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          cloud
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          scss
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <i
          role="button"
          style="height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="height: 1.8em; width: 1.8em;"
            tone="major"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(271,81%,56%,1);
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="list"
      >
        react
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        java
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        cloud
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        scss
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <i
        role="button"
        style="height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="height: 1.8em; width: 1.8em;"
          tone="major"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating without any addNewTag function param 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(270,95%,75%,1);
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="list"
        >
          react
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          java
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          cloud
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <div
          class="c1"
          role="list"
        >
          scss
          <i
            style="height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              role="button"
              style="height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </i>
        </div>
        <i
          role="button"
          style="height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="height: 1.8em; width: 1.8em;"
            tone="major"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  padding: 0.125rem 0.25rem;
  border-radius: 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: hsla(271,91%,65%,1);
  color: hsla(270,100%,98%,1);
}

.c2 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-size: .625rem;
  gap: 0.5rem;
}

.c3 {
  cursor: pointer;
  color: hsla(270,95%,75%,1);
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="list"
      >
        react
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        java
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        cloud
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <div
        class="c1"
        role="list"
      >
        scss
        <i
          style="height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            role="button"
            style="height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </i>
      </div>
      <i
        role="button"
        style="height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="height: 1.8em; width: 1.8em;"
          tone="major"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
